# seedling

./: .gitignore  README.md  design-doc-v0.md  design-doc-v1.md
desktop/: launch.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: index.html
docs/: SAFETY.md
operator/: main.py  requirements.txt  run.sh
operator/static/: app.js  index.html  style.css
scripts/: preflight.sh
supervisor/: main.py  run.sh
supervisor/static/: app.js  index.html  style.css
zencode/: app.py  run.sh
zencode/static/: app.js  index.html  style.css
